# gcp

.github/: CODEOWNERS
.github/workflows/: _conversational_gen_ai_template__lint_and_test.yaml  linter.yaml  (+1 more)
gemini/sample-apps/conversational-genai-app-template/: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
gemini/sample-apps/conversational-genai-app-template/app/: README.md  chain.py  server.py
gemini/sample-apps/conversational-genai-app-template/app/eval/: utils.py
gemini/sample-apps/conversational-genai-app-template/app/eval/data/: chats.yaml
gemini/sample-apps/conversational-genai-app-template/app/patterns/custom_rag_qa/: chain.py  templates.py
gemini/sample-apps/conversational-genai-app-template/app/patterns/langgraph_dummy_agent/: chain.py
gemini/sample-apps/conversational-genai-app-template/app/utils/: input_types.py  output_types.py  tracing.py
gemini/sample-apps/conversational-genai-app-template/deployment/: README.md
gemini/sample-apps/conversational-genai-app-template/deployment/cd/: deploy-to-prod.yaml  staging.yaml
gemini/sample-apps/conversational-genai-app-template/deployment/ci/: pr_checks.yaml
gemini/sample-apps/conversational-genai-app-template/deployment/terraform/: apis.tf  artifact_registry.tf  build_triggers.tf  iam.tf  log_sinks.tf  service_accounts.tf  storage.tf  variables.tf
gemini/sample-apps/conversational-genai-app-template/deployment/terraform/dev/: iam.tf  log_sinks.tf  storage.tf  variables.tf
gemini/sample-apps/conversational-genai-app-template/notebooks/: getting_started.ipynb
gemini/sample-apps/conversational-genai-app-template/streamlit/: side_bar.py  streamlit_app.py
gemini/sample-apps/conversational-genai-app-template/streamlit/utils/: local_chat_history.py  message_editing.py  multimodal_utils.py  stream_handler.py  utils.py
gemini/sample-apps/conversational-genai-app-template/tests/integration/: test_chain.py  test_server_e2e.py
gemini/sample-apps/conversational-genai-app-template/tests/integration/patterns/: test_langgraph_dummy_agent.py  test_rag_qa.py
gemini/sample-apps/conversational-genai-app-template/tests/load_test/: README.md  load_test.py
gemini/sample-apps/conversational-genai-app-template/tests/unit/: test_server.py
gemini/sample-apps/conversational-genai-app-template/tests/unit/test_utils/: test_tracing_exporter.py
(+3 files in other folders)
